# ClaimPilot-Memory-DrivenAIAgentforInsuranceClaims

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/: app_factory.py
customer_support_agent/api/routers/: __init__.py  drafts.py  evaluation.py
customer_support_agent/schemas/: api.py
customer_support_agent/services/: copilot_service.py  evaluation_service.py  model_service.py
data/: evaluation_metrics.json  real_world_claims.csv  support.db
data/chroma_rag/: chroma.sqlite3
docs/: Final_Evaluation_Guide.md  Grafana_EC2_Deployment_Guide.md  Monitoring_Testing_Guide.md  PROJECT_DEEP_DIVE.md  Project_Master_Documentation.md  VIVA_ARCHITECTURE_GUIDE.md
grafana/provisioning/dashboards/: claims_dashboard.json  dashboard.yml
prometheus/: prometheus.yml
rag_app/: expirements.ipynb  flow.excalidraw
scripts/: fetch_real_data.py
tests/: test_langmem_detailed.py
