[project]
name = "customer-support-agent"
version = "0.1.0"
description = "AI copilot for claims/support agents with FastAPI, LangChain, LangMem, and ChromaDB"
readme = "Plan.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-dotenv",
  "langchain",
  "langchain-core",
  "langchain-groq",
  "langchain-google-genai",
  "langchain-text-splitters",
  "langmem",
  "chromadb",
  "streamlit",
  "requests",
  "email-validator",
  "google-genai",
  "prometheus-fastapi-instrumentator",
  # Optional local embedding stack (disabled to keep EC2 image size low):
  # "sentence-transformers",
  # "torch",
  "transformers>=5.5.4",
  "sentence-transformers>=5.4.1",
  "torch>=2.11.0",
  "tqdm>=4.67.3",
  "pandas>=2.3.3",
  "numpy>=2.4.2",
  "scikit-learn>=1.8.0",
  "prometheus-client>=0.25.0",
]

[tool.uv]
package = false

# Optional torch CPU index (enable only if uncommenting "torch" above):
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
#
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[dependency-groups]
dev = [
  "playwright>=1.58.0",
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
